<resources>
    <string name="app_name">Cipmas</string>
    <string name="codetrik_logo">codetrik logo</string>
    <string name="nav_header_desc">Code Trik Quotation App</string>
    <string name="quotation">Quotation</string>
    <string name="material">Material</string>
    <string name="supplier">Supplier</string>
    <string name="customer">Customer</string>
    <string name="quotation_description">Quotation for 5KVA solar installation</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="pdf">PDF</string>
    <string name="customer_name">Hamzat Abdulrahman</string>
    <string name="last_update_time">29:01:2021 @ 15:32:12</string>
    <string name="popup_menu_image_for_card_view">vest more image for pupup menu</string>
    <string name="telephone">+2348142408496</string>
    <string name="customer_address">Plot 7, Ajetunmobi Street, behind Ibadan Grammer School, Molete, Ibadan</string>
    <string name="material_generic_name">Inverter</string>
    <string name="material_product_name">Techfine Pure Sine Wave</string>
    <string name="material_guage">5KVA</string>
    <string name="name">Name</string>
    <string name="city">City</string>
    <string name="postal_code">Postal Code</string>
    <string name="state">State</string>
    <string name="street_type">Street Type</string>
    <string name="street_name">Street Name</string>
    <string name="office_number">Office Address Number</string>
    <string name="name_label">Name</string>
    <string name="telephone_label">Telephone</string>
    <string name="add_customer">Add Customer</string>
    <string name="house_number">House Address Number</string>
    <string name="generic_name_label">Generic Name</string>
    <string name="product_name_lanel">Product Name</string>
    <string name="guage_size_capacity_label">Guage | Size | Capacity</string>
    <string name="inverter_capacity">500KVA</string>
    <string name="unit_price">Unit Price</string>
    <string name="price">100000.00</string>
    <string name="dealear_price">Dealear price</string>
    <string name="add_material">Add Material</string>
    <string name="add_supplier">Add Supplier</string>
    <string name="unit">Unit (e.g Unit, Yard, Meter e.t.c)</string>
    <string name="quotation_description_label">Quotation Description</string>
    <string name="quotation_fufillment">Is quotation fufilled</string>
    <string name="loading">...</string>
    <string name="post">Post</string>
    <string name="fab_icon">fab icon</string>
    <string name="quantity">Quantity</string>
    <string name="total_cost">Total Cost</string>
</resources>