<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/material_add_root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MaterialAdd">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guide_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="5dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guide_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="5dp" />

    <ScrollView
        android:id="@+id/material_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="5dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/right_guide_line"
        app:layout_constraintStart_toEndOf="@id/left_guide_line"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/generic_material_name_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@id/generic_material_name_input"
                android:text="@string/generic_name_label" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <EditText
                android:id="@+id/generic_material_name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                tools:text="@string/material_generic_name" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <TextView
                android:id="@+id/material_product_name_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@id/material_product_name_input"
                android:text="@string/product_name_lanel" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <EditText
                android:id="@+id/material_product_name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                tools:text="@string/material_product_name" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <TextView
                android:id="@+id/material_guage_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@id/material_guage_input"
                android:text="@string/guage_size_capacity_label" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <EditText
                android:id="@+id/material_guage_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="text"
                tools:text="@string/inverter_capacity" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <TextView
                android:id="@+id/material_unit_price_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@id/material_unit_price_input"
                android:text="@string/unit_price" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <EditText
                android:id="@+id/material_unit_price_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                tools:text="@string/price" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <TextView
                android:id="@+id/material_unit_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@id/material_unit_input"
                android:text="@string/unit" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <EditText
                android:id="@+id/material_unit_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                tools:text="Yard" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <CheckBox
                android:id="@+id/material_dealership_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dealear_price" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/select_supplier_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_supplier" />

                <TextView
                    android:id="@+id/selected_supplier"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp" />
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <Button
                android:id="@+id/add_material_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_material" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>