<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/quotation_add_parent_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.QuotationAdd">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guide_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="10dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guide_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="10dp" />

    <ScrollView
        android:id="@+id/quotation_scroll_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/right_guide_line"
        app:layout_constraintStart_toStartOf="@id/left_guide_line"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/quotation_description_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:labelFor="@id/quotation_description_input"
                android:text="@string/quotation_description_label" />

            <EditText
                android:id="@+id/quotation_description_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                tools:text="@string/quotation_description" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <CheckBox
                android:id="@+id/is_quotation_fufilled"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quotation_fufillment" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/customer_add_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_customer" />

                <TextView
                    android:id="@+id/customer_name_label_for_quotation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/loading" />
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <Button
                android:id="@+id/post_quotation_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/post" />
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_quote_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:contentDescription="@string/fab_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/right_guide_line"
        app:srcCompat="@android:drawable/ic_input_add" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/quotes_recycler_view"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/right_guide_line"
        app:layout_constraintStart_toStartOf="@id/left_guide_line"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/quote_object_card" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/quotationViewGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="quotation_scroll_view"
        app:layout_constraintEnd_toStartOf="@id/right_guide_line"
        app:layout_constraintStart_toStartOf="@id/left_guide_line"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="gone" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/quoteViewGroup"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:constraint_referenced_ids="quotes_recycler_view,add_quote_fab"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/right_guide_line"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/left_guide_line"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>