<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.CustomerAdd">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/customer_add_left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="10dp" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/customer_add_right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="10dp" />

    <ScrollView
        android:id="@+id/customer_scroll_view"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/customer_add_right_guideline"
        app:layout_constraintStart_toStartOf="@+id/customer_add_left_guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/customer_name_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@id/customer_name_label_input"
                android:text="@string/name_label" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <EditText
                android:id="@+id/customer_name_label_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                tools:text="@string/customer_name"
                android:importantForAutofill="no" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <TextView
                android:id="@+id/customer_house_number_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@id/customer_house_number_input"
                android:text="@string/house_number" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <EditText
                android:id="@+id/customer_house_number_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                tools:text="NO: 6/8"
                android:importantForAutofill="no" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <TextView
                android:id="@+id/customer_street_name_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@id/customer_street_name_input"
                android:text="@string/street_name" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <EditText
                android:id="@+id/customer_street_name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                tools:text="Abeku Ajofeebo"
                android:importantForAutofill="no" />
            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <TextView
                android:id="@+id/customer_street_type_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@id/customer_street_type_input"
                android:text="@string/street_type" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <EditText
                android:id="@+id/customer_street_type_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                tools:text="Estate"
                android:importantForAutofill="no" />
            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <TextView
                android:id="@+id/customer_city_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@id/customer_city_input"
                android:text="@string/city" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <EditText
                android:id="@+id/customer_city_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                tools:text="Ibadan"
                android:importantForAutofill="no" />
            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <TextView
                android:id="@+id/customer_province_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@id/customer_province_input"
                android:text="@string/state" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <EditText
                android:id="@+id/customer_province_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                tools:text="Oyo State"
                android:importantForAutofill="no" />
            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <TextView
                android:id="@+id/customer_postal_code_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@id/customer_postal_code_input"
                android:text="@string/postal_code" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <EditText
                android:id="@+id/customer_postal_code_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                tools:text="200043"
                android:importantForAutofill="no" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <TextView
                android:id="@+id/customer_telephone_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@id/customer_telephone_input"
                android:text="@string/telephone_label" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <EditText
                android:id="@+id/customer_telephone_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="phone"
                tools:text="+2348142408496"
                android:importantForAutofill="no" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <Button
                android:id="@+id/add_customer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_customer" />


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>